<resources>
    <string name="about_footer_copyright">© 2009-2026 Dynamix USA, LLC</string>
    <string name="about_footer_links">Privacy Policy | Terms of Use</string>
    <string name="about_terms">By using this application, you agree to the following terms and conditions</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">PrinterShare</string>
    <string name="banner_upgrade_action">UPGRADE TO PREMIUM</string>
    <string name="button_add_printer">Add Printer</string>
    <string name="button_agree">Agree</string>
    <string name="button_buynow">Buy Now</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_continue">Continue</string>
    <string name="button_edit">Edit</string>
    <string name="button_exit">Exit</string>
    <string name="button_forgot_password">Forgot password?</string>
    <string name="button_go">Go</string>
    <string name="button_login">Login</string>
    <string name="button_logout">Logout</string>
    <string name="button_main_calendar">Calendar</string>
    <string name="button_main_call_log">Call Log</string>
    <string name="button_main_contacts">Contacts</string>
    <string name="button_main_docs">Documents</string>
    <string name="button_main_gmail">Gmail</string>
    <string name="button_main_messages">Messages</string>
    <string name="button_main_pictures">Pictures</string>
    <string name="button_main_web_pages">Web Pages</string>
    <string name="button_no">No</string>
    <string name="button_ok">OK</string>
    <string name="button_open_settings">Open Settings</string>
    <string name="button_options">Options</string>
    <string name="button_print">Print</string>
    <string name="button_print_test_page">Print Test Page</string>
    <string name="button_recover_password">Recover Password</string>
    <string name="button_review">Review</string>
    <string name="button_save">Save</string>
    <string name="button_scan">Scan for printers</string>
    <string name="button_search">Search</string>
    <string name="button_select">Select</string>
    <string name="button_select_manually">Select Manually</string>
    <string name="button_send_feedback">Send Feedback</string>
    <string name="button_signup">Sign Up</string>
    <string name="button_skip">Skip</string>
    <string name="button_troubleshooting">Report a problem</string>
    <string name="button_use_generic">Use Generic</string>
    <string name="button_yes">Yes</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="com.google.firebase.crashlytics.mapping_file_id">a3521e2019cb4bfda2baa48aa3edb04f</string>
    <string name="com.google.firebase.crashlytics.version_control_info">repositories {\n  system: GIT\n  local_root_path: \"$PROJECT_DIR\"\n  revision: \"ef68bdbf45fc4e3eb3b34fbf19f45076672ca0e8\"\n}\n</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="dialog_activate_license_text">Enter the license code you received in the confirmation email (it starts with PS).</string>
    <string name="dialog_activate_license_title">Activate License</string>
    <string name="dialog_add_manually_label_ip">Enter IP address / Hostname</string>
    <string name="dialog_add_manually_title">Add Manually</string>
    <string name="dialog_authorization_label_2step_note">Note: This app doesn\'t support 2-step verification for Google accounts, so please enter a special password called application-specific password to allow this application to connect to your account.</string>
    <string name="dialog_authorization_label_login">Login</string>
    <string name="dialog_authorization_label_password">Password</string>
    <string name="dialog_authorization_title">Authorization required</string>
    <string name="dialog_driver_not_found_text">We did not find driver for your printer. Please select it manually.</string>
    <string name="dialog_driver_note">Note: You may also share the printer with our software from printershare.net on Windows, or built-in Printer Sharing on Mac.</string>
    <string name="dialog_generic_driver_found_text">We did not find driver for your printer and recommend using generic one instead. Printing may be black and white. You can also select driver manually.</string>
    <string name="dialog_incompatible_settings_text">Unable to print. There are one or more conflicting settings:</string>
    <string name="dialog_incompatible_settings_title">Incompatible settings</string>
    <string name="dialog_install_docs_render_text">To open documents you need to install/update Doc Render Library. It is free. The download size is about 64Mb. \n\nDownload Doc Render Library now?</string>
    <string name="dialog_install_drivers_text">To print to Nearby printers you need to install/update Driver Pack. It is free. The download size is about 12Mb. \n\nDownload Driver Pack now?</string>
    <string name="dialog_install_printer_done">Congratulations! Your printer is configured and ready.</string>
    <string name="dialog_key_activation_error_text">Your activation key is not valid, expired or has no more activations available. Please contact us at support@printershare.net for assistance.</string>
    <string name="dialog_key_activation_error_title">Attention</string>
    <string name="dialog_login_label_email">Email</string>
    <string name="dialog_login_label_note">Note: Alternatively you may enter your numeric User ID instead of email.</string>
    <string name="dialog_login_label_password">Password</string>
    <string name="dialog_login_label_server">Server</string>
    <string name="dialog_login_title">Login</string>
    <string name="dialog_no_bt_printers_text">Possible reasons: Bluetooth is off. Printer is off or not in the range. Printer is not compatible with PrinterShare. You may try Nearby Wi-Fi or Remote printing with our computer software from printershare.net.</string>
    <string name="dialog_no_printers_title">No Printers Found</string>
    <string name="dialog_no_usb_printers_text">Possible reasons: USB Host mode is not supported on your android device. Printer is off or not connected by USB cable to android device. Printer is not compatible with PrinterShare. You may try Nearby Wi-Fi or Remote printing with our computer software from printershare.net.</string>
    <string name="dialog_no_wifi_printers_text">Possible reasons: Wi-Fi is off. Printer is off or not connected to the same Wi-Fi network. Printer is not compatible with PrinterShare. You may share the printer with our software from printershare.net on Windows, or built-in Printer Sharing on Mac.</string>
    <string name="dialog_password_recovery_label_email">Email</string>
    <string name="dialog_password_recovery_label_note">Note: please provide the email address associated with your account</string>
    <string name="dialog_password_recovery_title">Password Recovery</string>
    <string name="dialog_payment_options_label_annual_subscription">Annual Subscription</string>
    <string name="dialog_payment_options_label_monthly_subscription">Monthly Subscription</string>
    <string name="dialog_payment_options_label_onetime_payment">Perpetual License</string>
    <string name="dialog_premium_upgrade_text">For unlimited printing please upgrade to Premium.\n\nWe recommend printing a test page to ensure compatibility before upgrading.\n</string>
    <string name="dialog_premium_upgrade_title">UPGRADE TO PREMIUM</string>
    <string name="dialog_register_label_email">Email</string>
    <string name="dialog_register_label_name">Name</string>
    <string name="dialog_register_label_server">Server</string>
    <string name="dialog_register_title">New User</string>
    <string name="dialog_search_label_online_printers_only">Online Printers Only</string>
    <string name="dialog_search_text">Please specify the email address, name or numeric ID of the user sharing the printer.</string>
    <string name="dialog_search_title">Find Printers</string>
    <string name="dialog_secure_print_label_job_name">Job Name</string>
    <string name="menu_refresh">Refresh</string>
    <string name="message_remote_printers_empty_bottom">Once printers are shared under the same account, please select Refresh or restart the app to see them here. You may also search for and add printers shared by others.</string>
    <string name="message_remote_printers_empty_top">Add printers shared on the network or install our software from PRINTERSHARE.NET on a Windows or Mac computer, login with the same account and share your printers.</string>
    <string name="message_remote_printers_info_bottom">ATTENTION: To print locally you don\'t need Remote Print. Install the software from PRINTERSHARE.NET on your computer connected to the printer and find your printer as Nearby WiFi. Make sure your device and the computer are on the same local network.</string>
    <string name="message_remote_printers_info_top">Remote Printers are shared on the network by users running our software on their Windows or Mac computers. To use Remote Printing please login or sign up for a new account.</string>
    <string name="profile_label_address">Address</string>
    <string name="profile_label_country">Country</string>
    <string name="profile_label_email">Email</string>
    <string name="profile_label_name">Name</string>
    <string name="profile_label_nickname">Nickname</string>
    <string name="profile_label_phone">Phone</string>
    <string name="profile_label_user_id">User ID</string>
</resources>