<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_weight="1">
        <com.dynamixsoftware.printershare.DashboardLayout
            android:padding="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <com.dynamixsoftware.printershare.MyImageButton
                android:id="@+id/print_pictures"
                android:tag="@string/button_main_pictures"
                android:background="?android:attr/selectableItemBackground"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:src="@drawable/btn_ic_pictures"
                android:antialias="true"
                android:cropToPadding="true"/>
            <com.dynamixsoftware.printershare.MyImageButton
                android:id="@+id/print_docs"
                android:tag="@string/button_main_docs"
                android:background="?android:attr/selectableItemBackground"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:src="@drawable/btn_ic_docs"
                android:antialias="true"
                android:cropToPadding="true"/>
            <com.dynamixsoftware.printershare.MyImageButton
                android:id="@+id/print_web_pages"
                android:tag="@string/button_main_web_pages"
                android:background="?android:attr/selectableItemBackground"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:src="@drawable/btn_ic_web"
                android:antialias="true"
                android:cropToPadding="true"/>
            <com.dynamixsoftware.printershare.MyImageButton
                android:id="@+id/print_gmail"
                android:tag="@string/button_main_gmail"
                android:background="?android:attr/selectableItemBackground"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:src="@drawable/btn_ic_gmail"
                android:antialias="true"
                android:cropToPadding="true"/>
            <com.dynamixsoftware.printershare.MyImageButton
                android:id="@+id/print_contacts"
                android:tag="@string/button_main_contacts"
                android:background="?android:attr/selectableItemBackground"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:src="@drawable/btn_ic_contacts"
                android:antialias="true"
                android:cropToPadding="true"/>
            <com.dynamixsoftware.printershare.MyImageButton
                android:id="@+id/print_calendar"
                android:tag="@string/button_main_calendar"
                android:background="?android:attr/selectableItemBackground"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:src="@drawable/btn_ic_calendar"
                android:antialias="true"
                android:cropToPadding="true"/>
            <com.dynamixsoftware.printershare.MyImageButton
                android:id="@+id/print_messages"
                android:tag="@string/button_main_messages"
                android:background="?android:attr/selectableItemBackground"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:src="@drawable/btn_ic_messages"
                android:antialias="true"
                android:cropToPadding="true"/>
            <com.dynamixsoftware.printershare.MyImageButton
                android:id="@+id/print_call_log"
                android:tag="@string/button_main_call_log"
                android:background="?android:attr/selectableItemBackground"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:src="@drawable/btn_ic_calllog"
                android:antialias="true"
                android:cropToPadding="true"/>
        </com.dynamixsoftware.printershare.DashboardLayout>
    </ScrollView>
    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:id="@+id/upgrade_banner"
        android:background="?android:attr/selectableItemBackground"
        android:padding="16dp"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textStyle="bold"
            android:textColor="#33b5e5"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/banner_upgrade_action"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:background="@color/bottom_panel_bg"
        android:padding="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <include layout="@layout/printer"/>
        </FrameLayout>
        <FrameLayout
            android:layout_gravity="bottom"
            android:padding="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/select_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="150dp"
                android:minWidth="105dp"
                android:text="@string/button_select"/>
        </FrameLayout>
    </LinearLayout>
</LinearLayout>
