<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"/>
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/info"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="24dp"
        android:layout_weight="1">
        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="?android:attr/textColorSecondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="600dp"
            android:text="@string/message_remote_printers_info_top"/>
        <ImageView
            android:padding="16dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/remote_diag"
            android:scaleType="fitCenter"
            android:layout_weight="1"/>
        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="?android:attr/textColorSecondary"
            android:autoLink="web"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="600dp"
            android:text="@string/message_remote_printers_info_bottom"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/empty"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="24dp"
        android:layout_weight="1">
        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="?android:attr/textColorSecondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="600dp"
            android:text="@string/message_remote_printers_empty_top"/>
        <ImageView
            android:padding="16dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/remote_empty"
            android:scaleType="fitCenter"
            android:layout_weight="1"/>
        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="?android:attr/textColorSecondary"
            android:autoLink="web"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="600dp"
            android:text="@string/message_remote_printers_empty_bottom"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:background="@color/bottom_panel_bg"
        android:padding="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:paddingRight="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:textSize="16dp"
                android:textStyle="bold"
                android:textColor="?android:attr/textColorPrimary"
                android:ellipsize="end"
                android:id="@+id/hint1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"/>
            <TextView
                android:textSize="14dp"
                android:textColor="?android:attr/textColorPrimary"
                android:ellipsize="end"
                android:id="@+id/hint2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"/>
        </LinearLayout>
        <Button
            android:id="@+id/button_signup"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="105dp"
            android:text="@string/button_signup"
            android:layout_marginEnd="8dp"/>
        <Button
            android:id="@+id/button_login"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="105dp"
            android:text="@string/button_login"/>
        <Button
            android:id="@+id/button_refresh"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="105dp"
            android:text="@string/menu_refresh"
            android:layout_marginEnd="8dp"/>
        <Button
            android:id="@+id/button_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="105dp"
            android:text="@string/button_add_printer"/>
    </LinearLayout>
</LinearLayout>
