<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textStyle="bold"
            android:textColor="?android:attr/textColorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/profile_label_user_id"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:textColor="?android:attr/textColorPrimary"
            android:id="@+id/user_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"/>
        <TextView
            android:textStyle="bold"
            android:textColor="?android:attr/textColorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/profile_label_name"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:textColor="?android:attr/textColorPrimary"
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"/>
        <TextView
            android:textStyle="bold"
            android:textColor="?android:attr/textColorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/profile_label_nickname"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:textColor="?android:attr/textColorPrimary"
            android:id="@+id/user_nick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"/>
        <TextView
            android:textStyle="bold"
            android:textColor="?android:attr/textColorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/profile_label_email"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:textColor="?android:attr/textColorPrimary"
            android:id="@+id/user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"/>
        <TextView
            android:textStyle="bold"
            android:textColor="?android:attr/textColorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/profile_label_phone"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:textColor="?android:attr/textColorPrimary"
            android:id="@+id/user_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"/>
        <TextView
            android:textStyle="bold"
            android:textColor="?android:attr/textColorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/profile_label_address"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:textColor="?android:attr/textColorPrimary"
            android:id="@+id/user_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"/>
        <TextView
            android:textColor="?android:attr/textColorPrimary"
            android:id="@+id/user_city_state_zip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"/>
        <TextView
            android:textStyle="bold"
            android:textColor="?android:attr/textColorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/profile_label_country"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:textColor="?android:attr/textColorPrimary"
            android:id="@+id/user_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"/>
    </LinearLayout>
</ScrollView>
