<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_weight="1">
        <LinearLayout
            android:orientation="vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="16dp"
                android:textStyle="bold"
                android:textColor="?android:attr/textColorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_label_user_id"/>
            <TextView
                android:textSize="12dp"
                android:textColor="?android:attr/textColorPrimary"
                android:id="@+id/user_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:textSize="16dp"
                android:textStyle="bold"
                android:textColor="?android:attr/textColorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_label_name"/>
            <TextView
                android:textSize="12dp"
                android:textColor="?android:attr/textColorPrimary"
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:textSize="16dp"
                android:textStyle="bold"
                android:textColor="?android:attr/textColorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_label_nickname"/>
            <TextView
                android:textSize="12dp"
                android:textColor="?android:attr/textColorPrimary"
                android:id="@+id/user_nick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:textSize="16dp"
                android:textStyle="bold"
                android:textColor="?android:attr/textColorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_label_email"/>
            <TextView
                android:textSize="12dp"
                android:textColor="?android:attr/textColorPrimary"
                android:id="@+id/user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:textSize="16dp"
                android:textStyle="bold"
                android:textColor="?android:attr/textColorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_label_phone"/>
            <TextView
                android:textSize="12dp"
                android:textColor="?android:attr/textColorPrimary"
                android:id="@+id/user_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:textSize="16dp"
                android:textStyle="bold"
                android:textColor="?android:attr/textColorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_label_address"/>
            <TextView
                android:textSize="12dp"
                android:textColor="?android:attr/textColorPrimary"
                android:id="@+id/user_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:textSize="12dp"
                android:textColor="?android:attr/textColorPrimary"
                android:id="@+id/user_city_state_zip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:textSize="16dp"
                android:textStyle="bold"
                android:textColor="?android:attr/textColorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_label_country"/>
            <TextView
                android:textSize="12dp"
                android:textColor="?android:attr/textColorPrimary"
                android:id="@+id/user_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>
    <include layout="@layout/bottom"/>
</LinearLayout>
